@@ -73,7 +73,8 @@ build_qm() {
       error "Could not unpack source distribution"
     changedir qm-${QM_VERSION}
     # Create an installation directory.
-    mkdir qm-${QM_VERSION}-install || \
+    rm -rf ../qm-${QM_VERSION}-install
+    mkdir ../qm-${QM_VERSION}-install || \
       error "Could not create installation directory"
     # Configure QM.
     ./configure --prefix=../qm-${QM_VERSION}-install "$@" || \
@@ -131,14 +132,45 @@ build_rpm() {
       error "Could not create RPM"
 }
 
-# Build the binary distribution.
+# Build a binary distribution.
 
 build_binary() {
     build_qm
     echo "Building binary distribution..."
     changedir qm-${QM_VERSION}-install
-    tar czf ../../${QM_BINARY_TAR_GZ} . || \
+    rm -f ../${QM_BINARY_TAR_GZ}
+    tar czf ../${QM_BINARY_TAR_GZ} . || \
       error "Could not create tar file"
+    changedir ..
+}
+
+# Build a self-extracting executable.
+
+build_exec() {
+    build_qm --with-python=/cygdrive/c/Python21/Python.exe
+    # Fix the qmtest.bat to use the default prefix.
+    (sed -e "s|../qm-${QM_VERSION}-install|c:\\\\Program Files\\\\QM|g" \
+      < qm-${QM_VERSION}-install/bin/qmtest.bat \
+      > qm-${QM_VERSION}-install/bin/qmtest.bat.new && 
+      mv qm-${QM_VERSION}-install/bin/qmtest.bat.new \
+         qm-${QM_VERSION}-install/bin/qmtest.bat) ||
+      error "Could not fix batch file"
+    echo "Building ZIP file..."
+    changedir qm-${QM_VERSION}-install
+    rm -f ../${QM_BINARY_ZIP}
+    zip -q -r ../${QM_BINARY_ZIP} . || \
+      error "Could not create zip file"
+    changedir ..
+    rm -f ${QM_BINARY_EXE}
+    # The makesfx.exe exit code is apparently non-zero even on 
+    # success, so we do not check the result.
+    "c:/Program Files/FreeExtractor/makesfx.exe" \
+      /zip=${QM_BINARY_ZIP} \
+      /sfx=${QM_BINARY_EXE} \
+      /title="QM ${QM_VERSION}" \
+      /website="http://www.codesourcery.com" \
+      /intro="Thank you for installing QMTest!" \
+      /defaultpath="\$programfiles\$\\QM"
 }
 
 ########################################################################
@@ -168,6 +200,10 @@ RPM_BASE=/usr/src/redhat
 QM_SOURCE_TAR_GZ=
 # The binary distribution.
 QM_BINARY_TAR_GZ=
+# The ZIP file.
+QM_BINARY_ZIP=
+# The executable file.
+QM_BINARY_EXE=
 
 # Modes of operation.
 SOURCE=0
@@ -191,6 +227,8 @@ QM_MAJOR_VER=`echo $QM_VERSION | awk --assign FS=. '{ print $1; }'`
 QM_MINOR_VER=`echo $QM_VERSION | awk --assign FS=. '{ print $2; }'`
 QM_SOURCE_TAR_GZ=qm-${QM_VERSION}.tar.gz
 QM_BINARY_TAR_GZ=qm-${QM_VERSION}-binary.tar.gz
+QM_BINARY_ZIP=qm-${QM_VERSION}.zip
+QM_BINARY_EXE=qm-${QM_VERSION}.exe
 
 # Handle the major modes.
 while [ $# -ne 0 ]; do
@@ -198,6 +236,7 @@ while [ $# -ne 0 ]; do
     source) SOURCE=1;;
     rpm)    RPM=1;;
     binary) BINARY=1;;
+    exec)   EXEC=1;;
     *)      usage;;
     esac
     shift
@@ -220,4 +259,8 @@ fi
 
 if [ ${BINARY} -ne 0 ]; then
   build_binary
+fi
+
+if [ ${EXEC} -ne 0 ]; then
+  build_exec
 fi
